# CMAO

./: .gitignore  CMAO Correct-Mode Advantage Optimization.md  README.md  aime_base_eval_commands.txt  grpo7b_new_eval_commands.txt  patch_cmao_computer.py  pyproject.toml  test.py
configs/experiment/: eval_aime2024_base_qwen35_9b.json  eval_aime2024_cmao_qwen35_9b.json  eval_aime2024_grpo_qwen35_9b.json  eval_aime2024_online_cmao_100.json  eval_aime2024_online_grpo_100.json  eval_gsm8k_base_100.json  eval_gsm8k_cmao_100.json  eval_gsm8k_cmao_full_100.json  eval_gsm8k_cmao_lite_100.json  eval_gsm8k_grpo_100.json  eval_math500_base_qwen35_9b.json  eval_math500_cmao_qwen35_9b.json  eval_math500_grpo_qwen35_9b.json  gsm8k_200.json  gsm8k_group16.json  gsm8k_group4.json  gsm8k_quickstart.json  math500_full.json
configs/model/: qwen2.5-math-1.5b.json  qwen35-9b.json
configs/scoring/: default.json
configs/training/: aime2024_online_cmao_qwen35_9b_lora.json  aime2024_online_grpo_qwen35_9b_lora.json  gsm8k_cmao_lite_lora.json  gsm8k_cmao_lora.json  (+8 more)
data/: README.md
scripts/: advantage.py  analyze_cases.py  eval_aime_all_online.sh  evaluate.py  merge_lora.py  plot_training_metrics.py  prepare_train_data.py  report.py  rerank_eval.py  sample.py  score.py  summarize_aime_eval.py  train_online_grpo.py  train_policy.py
src/cmao/: __init__.py  (+18 more)
tests/: test_answer_judge.py  test_case_analysis.py  test_cmao.py  test_mode_tagger.py  test_online_grpo_config.py  test_quality_scorer.py  test_trainer_collator.py  test_training_data.py  test_training_loss.py  test_training_quality.py
