[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmao"
version = "0.1.0"
description = "Correct-Mode Advantage Optimization offline experimentation toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sympy>=1.13",
  "datasets>=2.20",
  "transformers>=4.46",
  "torch>=2.4",
  "tqdm>=4.66",
  "accelerate>=1.4",
  "peft>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cmao = "cmao.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
